[#1]: Microservices and documentation
* Update `README.md`;
* Update c4 diagrams;
* Update swagger schemes;
* Update new microservices device and telemetry for current implementation.
