# apps/smart_home/models/telemetry.go
@@ -1,9 +1,0 @@
-package models
-
-import "time"
-
-type TelemetryData struct {
-	DeviceID  uint64      `json:"device_id"`
-	Timestamp time.Time   `json:"timestamp"`
-	State     DeviceState `json:"state"`
-}
