# apps/smart_home_decomposed/telemetry/models/telemetry.go
@@ -1,0 +1,11 @@
+package models
+
+import (
+	"time"
+)
+
+type SensorTelemetry struct {
+	SensorID   uint64    `json:"sensor_id"`
+	Temerature *float64  `json:"temperature"`
+	Timestamp  time.Time `json:"timestamp"`
+}
